# bwt-merge

./: .gitignore  Cargo.toml  input.txt  input2.txt  results.xlsx  trie_build_log.txt
benches/: bench.rs
src/: bwt.rs  bwt_disk.rs  main.rs  trie.rs
tests/: trie.rs  trie_stress.rs
