[package]
name = "bwt-merge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
clap = { version = "4.4.18", features = ["derive"] }
divan = "0.1.11"
libdivsufsort-rs = "0.1.2"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false
